--- a/index.html
+++ b/index.html
@@ -14,16 +14,65 @@
   <body>
     <div class="grid-container">
       <nav class="sidebar">
-        <div class="logo">logo</div>
-        <div class="icon">home</div>
-        <div class="icon">home</div>
-        <div class="icon">home</div>
-        <div class="icon">home</div>
-        <div class="icon">home</div>
-        <div class="icon">home</div>
-        <div class="icon">home</div>
+        <div class="logo">DASHBOARD</div>
+        <div class="group1">
+          <div class="menu-option">
+            <img src="assets/home.svg" alt="" />
+            <p>Home</p>
+          </div>
+          <div class="menu-option">
+            <img src="assets/profile.svg" alt="" />
+            <p>Profile</p>
+          </div>
+          <div class="menu-option">
+            <img src="assets/message.svg" alt="" />
+            <p>Messages</p>
+          </div>
+          <div class="menu-option">
+            <img src="assets/clock.svg" alt="" />
+            <p>History</p>
+          </div>
+          <div class="menu-option">
+            <img src="assets/papers.svg" alt="" />
+            <p>Tasks</p>
+          </div>
+          <div class="menu-option">
+            <img src="assets/people.svg" alt="" />
+            <p>Communities</p>
+          </div>
+        </div>
+
+        <div class="group2">
+          <div class="menu-option">
+            <img src="assets/gear.svg" alt="" />
+            <p>Settings</p>
+          </div>
+          <div class="menu-option">
+            <img src="assets/help.svg" alt="" />
+            <p>Support</p>
+          </div>
+          <div class="menu-option">
+            <img src="assets/shield-check.svg" alt="" />
+            <p>Privacy</p>
+          </div>
+        </div>
       </nav>
-      <header class="header">header</header>
+      <header class="header">
+        <div class="left">
+          <img src="assets/magnify.svg" alt="search icon" />
+          <input type="text" />
+        </div>
+        <div class="right"><img src="assets/bell.svg" alt="bell icon" /></div>
+        <div class="left">
+          <p>Hi there,</p>
+          <p>Johnson Duong (@johnson)</p>
+        </div>
+        <div class="right">
+          <button>New</button>
+          <button>Upload</button>
+          <button>Share</button>
+        </div>
+      </header>
       <main class="main-content">
         <h1>Your Projects</h1>
         <section class="projects">
