Finish layout for header

--- a/index.html
+++ b/index.html
@@ -62,8 +62,11 @@
           <img src="assets/magnify.svg" alt="search icon" />
           <input type="text" />
         </div>
-        <div class="right"><img src="assets/bell.svg" alt="bell icon" /></div>
-        <div class="left">
+        <div class="right">
+          <img src="assets/bell.svg" alt="bell icon" /> <img class="profile-pic" src="assets/user-profile.jpeg" alt="" />
+          <p>Johnson Duong</p>
+        </div>
+        <div class="left bottom">
           <p>Hi there,</p>
           <p>Johnson Duong (@johnson)</p>
         </div>
